cluster-config/service-b/service-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
  labels:
    app: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: quay-registry-quay-quay-registry.apps.example.com/user1/service-b:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: quay-pull-secret
