cluster-config/service-b/service-b-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: service-b
  namespace: microservice-demo
spec:
  to:
    kind: Service
    name: service-b
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
